--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,10 +4,11 @@ PROJECT( cppUtilities-lib )
 
 ################################################################################
 #### settings for clang 5.0
-SET (CMAKE_CXX_COMPILER "clang++-5.0")
-SET (CLANG_CXX_FLAGS "-std=c++17 -Ofast -ffast-math -pthread -pedantic -pedantic-errors -Wall -Weffc++ -Wextra -Wfatal-errors -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -fno-assume-sane-operator-new -flto")
+SET (CMAKE_CXX_COMPILER "/clang_5.0.0/bin/clang++-5.0")
+#SET (CMAKE_CXX_STANDARD 17)
+SET (CLANG_CXX_FLAGS "-std=c++17 -O2 -ffast-math -pthread -pedantic -pedantic-errors -Wall -Weffc++ -Wextra -Wfatal-errors -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -fno-assume-sane-operator-new")
 ####SET (CLANG_CXX_FLAGS "${CLANG_CXX_FLAGS} -fsanitize=undefined")
-SET (CMAKE_CXX_FLAGS "${CLANG_CXX_FLAGS} -mtune=native -march=native -m64 -lm -lpthread")
+SET (CMAKE_CXX_FLAGS "${CLANG_CXX_FLAGS} -mtune=native -march=native -m64 -lm -lpthread -lc++experimental")
 ### use libstdc++
 SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
 ### use libc++
@@ -15,8 +16,7 @@ SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
 SET (CMAKE_LIBRARY_PATH "/usr/lib/x86_64-linux-gnu")
 ################################################################################
 
-SET (CMAKE_VERBOSE_MAKEFILE on )
-SET (BUILD_SHARED_LIBS ON)
+SET (CMAKE_VERBOSE_MAKEFILE on)
 
 # ------------------------- Begin Generic CMake Variable Logging ------------------
 
@@ -172,7 +172,7 @@ MESSAGE( STATUS )
 
 # ------------------------- End of Generic CMake Variable Logging ------------------
 
-SET( sources_list utilities.cpp cfile_helper.cpp concurrentLogging.cpp stringTokenizers.cpp printHelpers.cpp )
+SET( sources_list utilities.cpp cfile_helper.cpp concurrentLogging.cpp stringTokenizers.cpp printHelpers.h tprintf.cpp containerHelpers.h hasMember.h is_string.h perfTimer.h randomNumberGenerators.h vectorHelpers.h)
 
 ADD_LIBRARY( utilities ${sources_list} )
 
