--- a/src/unitTests/CMakeLists.txt
+++ b/src/unitTests/CMakeLists.txt
@@ -4,10 +4,11 @@ PROJECT( cppUtilities-unit-tests )
 
 ################################################################################
 #### settings for clang 5.0
-SET (CMAKE_CXX_COMPILER "clang++-5.0")
-SET (CLANG_CXX_FLAGS "-std=c++17 -Ofast -ffast-math -pthread -pedantic -pedantic-errors -Wall -Weffc++ -Wextra -Wfatal-errors -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -fno-assume-sane-operator-new -flto")
+SET (CMAKE_CXX_COMPILER "/clang_5.0.0/bin/clang++-5.0")
+#SET (CMAKE_CXX_STANDARD 17)
+SET (CLANG_CXX_FLAGS "-std=c++17 -O2 -ffast-math -pthread -pedantic -pedantic-errors -Wall -Weffc++ -Wextra -Wfatal-errors -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -fno-assume-sane-operator-new")
 ####SET (CLANG_CXX_FLAGS "${CLANG_CXX_FLAGS} -fsanitize=undefined")
-SET (CMAKE_CXX_FLAGS "${CLANG_CXX_FLAGS} -mtune=native -march=native -m64 -lm -lrt -ldl -lgtest_dll -lgtest_main")
+SET (CMAKE_CXX_FLAGS "${CLANG_CXX_FLAGS} -mtune=native -march=native -m64 -lm -lpthread -lc++experimental -lrt -ldl -lgtest_dll -lgtest_main")
 ### use libstdc++
 SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
 ### use libc++
@@ -15,7 +16,7 @@ SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
 SET (CMAKE_LIBRARY_PATH "/usr/lib/x86_64-linux-gnu")
 ################################################################################
 
-SET (CMAKE_VERBOSE_MAKEFILE on )
+SET (CMAKE_VERBOSE_MAKEFILE on)
 
 # ------------------------- Begin Generic CMake Variable Logging ------------------
 
