--- a/src/unitTests/CMakeLists.txt
+++ b/src/unitTests/CMakeLists.txt
@@ -4,8 +4,15 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
 PROJECT(${THE_PROJECT})
 
 ################################################################################
+#### settings for clang 7.0.0
+SET (CMAKE_CXX_COMPILER "/clang_7.0.0/bin/clang++")
+#SET (CMAKE_CXX_STANDARD 17)
+SET (CMAKE_INCLUDE_PATH "-I/clang_7.0.0/include/c++/v1 -I." )
+################################################################################
 #### settings for clang 5.0
-SET (CMAKE_CXX_COMPILER "/clang_5.0.0/bin/clang++-5.0")
+#SET (CMAKE_CXX_COMPILER "/clang_5.0.0/bin/clang++-5.0")
+#SET (CMAKE_INCLUDE_PATH "-I/clang_5.0.0/include/c++/v1 -I." )
+################################################################################
 SET (CMAKE_EXPORT_COMPILE_COMMANDS on)
 SET (CLANG_CXX_FLAGS "-I. -I.. -std=c++17 -Ofast -ffast-math -pthread -pedantic -pedantic-errors -Wall -Weffc++ -Wextra -Wfatal-errors -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -fno-assume-sane-operator-new")
 ####SET (CLANG_CXX_FLAGS "${CLANG_CXX_FLAGS} -fsanitize=undefined")
